// Copyright 2022 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package tensorflow.service;

// Deployment for running a custom MIA Evaluator.
message MIACustomConfig {
  repeated ExamplePaths train_paths = 1;
  repeated ExamplePaths test_paths = 2;

  // Modeling frameworks (i.e. TF Estimators or Keras) may return more than one
  // model output. In this case, output_name is used to specify the results.
  string output_name = 3;
}

// Paths to identify a set of examples.
message ExamplePaths {
  // Anything that identifies the required split.
  string split_name = 1;
  // If multiple ExampleGen components are used, use this field to identify the
  // correct ExampleGen output.
  string examples_type_name = 2;
}